# ls2k300

./: .gitignore  CMakeLists.txt  README.md  build.sh  main  main.cpp  main1  main2  main2_limit_inject_test
Driver/example/: CMakeLists.txt  README.md  build.sh
Driver/example/EMM_V5/: CMakeLists.txt  main.c
Driver/example/X42_V2/: CMakeLists.txt  build.sh  main.c
Driver/example/ssd1306/: CMakeLists.txt  build.sh  main.c
Driver/example/st7735/: CMakeLists.txt  build.sh  main.c
Driver/inc/: EMM_V5.h  ICSSD1306.h  ICST7735.h  X42_V2.h
Driver/src/: EMM_V5.c  ICSSD1306.c  ICST7735.c  X42_V2.c
user/: main.c  main.cpp  main1.cpp  main2.cpp  main2_limit_inject_test.cpp
user/driver/: Makefile  build.sh  encoder.c  encoder.ko
user/example/video_recorder/: CMakeLists.txt  build.sh  main.cpp
user/inc/: All_control.h  AppLog.h  ArmKinematics.h  ArmMotorPosition.h  Camera.h  Encoder.h  Motor.h  My_inc.h  NcnnDetector.h  Pid.h
user/src/: All_control.cpp  ArmKinematics.c  ArmMotorPosition.c  Camera.cpp  Encoder.c  Motor.cpp  NcnnDetector.cpp  Pid.cpp
user/test/: CMakeLists.txt  arm_motor23_manual_test  arm_motor23_manual_test.cpp  arm_sine_video_test  arm_sine_video_test.cpp  arm_x_speed_test  arm_x_speed_test.cpp  arm_z_speed_test  arm_z_speed_test.cpp  build.sh  build_arm_motor23_manual_test.sh  build_arm_sine_video_test.sh  build_arm_x_speed_test.sh  build_arm_z_speed_test.sh  build_injection_current_test.sh  build_rotation_control_test.sh  injection_current_test  injection_current_test.c  plot_injection_current_udp.m  plot_speed_udp.m  rotation_control_test  rotation_control_test.c  test.cpp  test_motor
